--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,7 @@
     
   </head>
   <body >
-    <div id="app">
+    <div class="bg-gray-100 h-screen" id="app">
      <app></app>
     </div>
   </body>
