Changed the background color and added the network activity indicator

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,8 @@
     
   </head>
   <body >
-    <div class="bg-gray-100 h-screen" id="app">
+    <div class="bg-blue-50 h-screen" id="app">
+      <network-activity-indicator></network-activity-indicator>
      <app></app>
     </div>
   </body>
